update : added some text in index.html and updated readme

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <body>
 <title>Welcomer to my repo</title>
 Hello there
+My name is Syed Andleeb
+I m interested in learning web dev
 </body>
 
 </html>
