update : added my learning upto now

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 Hello there
 My name is Syed Andleeb
 I m interested in learning web dev
+Upto now i have learned:
+1.How to make a cli app
+2.what git and github is
+3.hosting websites online
 </body>
 
 </html>
