update : added my interests

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@ Upto now i have learned:
 1.How to make a cli app
 2.what git and github is
 3.hosting websites online
+My hobbies:
+1.I like watching Superhero movies(especially MARVEL ones)
+2.I Love Playing football
 </body>
-
 </html>
