update : fixed some typos

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<title>Welcomer to my repo</title>
+<title>Welcome to my demo website</title>
 Hello there
 My name is Syed Andleeb
 I m interested in learning web dev
@@ -8,8 +8,9 @@ Upto now i have learned:
 1.How to make a cli app
 2.what git and github is
 3.hosting websites online
-My hobbies:
+My hobbies
 1.I like watching Superhero movies(especially MARVEL ones)
 2.I Love Playing football
+3.I like to meditate
 </body>
 </html>
