update : added new interest

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@ My hobbies
 1.I like watching Superhero movies(especially MARVEL ones)
 2.I Love Playing football
 3.I like to meditate
+4.I love skydiving
 </body>
 </html>
